--- a/app/views/blog/asana_integration.html.erb
+++ b/app/views/blog/asana_integration.html.erb
@@ -22,7 +22,7 @@
           </div>
 
           <div class="content">
-            <p>Hello everyone, today we present the Asana integration available on our platform: CenitHub. Asana is a Free Project Management for Teams, designed to enable teamwork without email.</p>
+            <p>Hello everyone, today we present the Asana integration available on our platform: Cenit.io. Asana is a Free Project Management for Teams, designed to enable teamwork without email.</p>
 
             <p>In the video, we will show how to install the Asana collection in our tenant, through the Shared Collection's pull action.</p>
 
@@ -32,9 +32,9 @@
 
             <h3>Developing:</h3>
 
-            <p>1. To access to the tenant in CenitHub, you should sign in at <%= link_to 'www.cenitsaas.com', 'https://www.cenitsaas.com' %>, which will prompt you for your username and password. If you are not registered, you can create a free account by Signing Up.</p>
+            <p>1. To access to the tenant in Cenit.io, you should sign in at <%= link_to 'cenithub.com', 'https://cenithub.com' %>, which will prompt you for your username and password. If you are not registered, you can create a free account by Signing Up.</p>
 
-            <p>2. Click the Data Integrator button, this redirect to <%= link_to 'www.cenithub.com', 'https://www.cenithub.com' %>, where we can see in the Dashboard the components already installed. Now, proceed to the Shared Collection menu option and list the available integrations. Find and select the Asana-1.0.0 shared collection, now we pull. Remember that you need your credentials from Asana, which means your username and password.</p>
+            <p>2. Click the Data Integrator button, this redirect to <%= link_to 'Cenit.io', 'https://cenit.io' %>, where we can see in the Dashboard the components already installed. Now, proceed to the Shared Collection menu option and list the available integrations. Find and select the Asana-1.0.0 shared collection, now we pull. Remember that you need your credentials from Asana, which means your username and password.</p>
 
             <p>3. After successfully pulled, the Dashboard displays a group of objects that allows us to interact with the service, like Webhooks and Connections.</p>
 
@@ -54,17 +54,17 @@
 
             <p>Once inside Asana website, we can see at the left side all the created projects list. You’ll notice Test Integration, well this is our project.</p>
 
-            <p>Now, we must create a Task from CenitHub, then send it to Asana. To make this step, we should import a valid json schema for a Task, here one of the most important thing is locate the workspace and task name.</p> 
+            <p>Now, we must create a Task from Cenit.io, then send it to Asana. To make this step, we should import a valid json schema for a Task, here one of the most important thing is locate the workspace and task name.</p>
 
-            <p>When you select the Basic Json Translator Importer, you notice that appear a new Task in CenitHub. Now you can send this Task to Asana trough Flow -> Create Task. 
+            <p>When you select the Basic Json Translator Importer, you notice that appear a new Task in Cenit.io. Now you can send this Task to Asana trough Flow -> Create Task.
             If we update Asana view and it’ll show the task created with the defined attributes in the json schema.</p>
 
             <p>For the second example 'Create a Project'</p>
 
-            <p>In this case Cenithub will be a bridge, because we’ll use the HttpRequester tool, to send requests to Cenit and it turn send the processed information to Asana.
+            <p>In this case Cenit.io will be a bridge, because we’ll use the HttpRequester tool, to send requests to Cenit and it turn send the processed information to Asana.
             We installed HttpRequester tool, because is a good plugin in Firefox that allows make easy http requests. </p>
 
-            <p>Then we must put in the header the X-User-Access-Token and X-User-Access-Key, these are in my CenitHub account. Don’t forget the CenitHub url too.</p>
+            <p>Then we must put in the header the X-User-Access-Token and X-User-Access-Key, these are in my Cenit.io account. Don’t forget the Cenit.io url too.</p>
 
             <p>If you remember in the first example, we have only one project named “Test Integration” </p>
 
@@ -74,7 +74,7 @@
 
             <p>In our last example 'List of Users’</p>
             
-            <p>We want that Cenithub list all the users and check this information with Asana, and for that we use the HttpRequester tool.</p> 
+            <p>We want that Cenit.io list all the users and check this information with Asana, and for that we use the HttpRequester tool.</p>
 
             <p>That’s all, I hope that you have found interesting and useful this material.</p> 
 
