--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -27,7 +27,7 @@
               and background running logic for the automatic management of the OAuth 2.0 protocol implementation
               provided by Google. Now the Gmail Cenit Collection is available, a wrapper that let you send emails as easy as it can be,
               so you do not have to run the awkward way of interacting with the API anymore.
-              Try it now by following the next steps by yourself, signing up for free in CenitSaaS.
+              Try it now by following the next steps by yourself, signing up for free in Cenit.
             </p>
             <%= link_to 'Continue reading ...', gmail_cenit_collection_blog_index_path, class: "continue-reading", data: { no_turbolink: true } %>
           </div>
@@ -63,7 +63,7 @@
               By Maikel Arcia, Jan 28, 2016
             </div>
             <p class="intro">
-              Now there are available on CenitHub over 80 API collections to
+              Now there are available on Cenit.io over 80 API collections to
               connect with the Google services that can be used to integrate with
               any solution. With Cenit you can have full access to an entire API through a
               single authorization point and customize responses actions to fit
@@ -87,7 +87,7 @@
               September 15, 2015
             </div>
             <p class="intro">
-              Hello everyone, today we present the Asana integration available on our platform: CenitHub. Asana is a Free Project Management for Teams, designed to enable teamwork without email.
+              Hello everyone, today we present the Asana integration available on our platform: Cenit.io. Asana is a Free Project Management for Teams, designed to enable teamwork without email.
               <br />
               In the video, we will show how to install the Asana collection in our tenant, through the Shared Collection's Pull action.
             </p>
@@ -107,11 +107,11 @@
               September 4, 2015
             </div>
             <p class="intro">
-              Today we present the MailChimp integration available on our platform CenitHub.
+              Today we present the MailChimp integration available on our platform Cenit.io.
               <br />
               MailChimp is an email marketing service, helps businesses with their marketing newsletters, automated messages, and targeted campaigns.
               <br />
-              In the video we will show how to install the collection MailChimp version 1.0 in our tenant of Cenithub, through the Shared Collection Pull action.
+              In the video we will show how to install the collection MailChimp version 1.0 in our tenant of Cenit.io, through the Shared Collection Pull action.
             </p>
             <%= link_to 'Continue reading ...', mailchimp_integration_blog_index_path, class: "continue-reading", data: { no_turbolink: true } %>
           </div>
@@ -191,9 +191,9 @@
               August 31, 2015
             </div>
             <p class="intro">
-              Hi, the next video is about Shipwire integration in Cenit-Hub with which is a storage company and fulfillment. (Is an eCommerce warehousing and order fulfillment company)
+              Hi, the next video is about Shipwire integration in Cenit.io with which is a storage company and fulfillment. (Is an eCommerce warehousing and order fulfillment company)
               <br />
-              First we will see how to make a pull to the shared cenit’s coleccion for Shipwire. Then some schemas, API data types, as well as webhook associated. Finally some flow examples  of integrations with Shipwire
+              First we will see how to make a pull to the shared Cenit’s coleccion for Shipwire. Then some schemas, API data types, as well as webhook associated. Finally some flow examples  of integrations with Shipwire
             </p>
             <%= link_to 'Continue reading ...', shipwire_integration_blog_index_path, class: "continue-reading", data: { no_turbolink: true } %>
           </div>
@@ -213,7 +213,7 @@
             <p class="intro">
               Now we are close to celebrate our first anniversary next Jun 1st. At that time, there have been 
               hard work, long hours of brainstorming and lots of valuable feedback from colleagues. Most of which added 
-              some new functionality or fine-tuned some existing functionality at CenitSaaS. We've got a recap of our work 
+              some new functionality or fine-tuned some existing functionality at Cenit. We've got a recap of our work
               that want to share with you.
             </p>
             <%= link_to 'Continue reading ...', first_anniversary_blog_index_path, class: "continue-reading", data: { no_turbolink: true } %>
