--- a/app/views/blog/mailchimp_integration.html.erb
+++ b/app/views/blog/mailchimp_integration.html.erb
@@ -23,17 +23,17 @@
           </div>
 
           <div class="content">
-            <p>Today we present the MailChimp integration available on our platform CenitHub.
+            <p>Today we present the MailChimp integration available on our platform Cenit.io.
 
             MailChimp is an email marketing service, helps businesses with their marketing newsletters, automated messages, and targeted campaigns.</p>
 
-            <p>In the video we will show how to install the collection MailChimp version 1.0 in our tenant of Cenithub, through the Shared Collection Pull action.</p>
+            <p>In the video we will show how to install the collection MailChimp version 1.0 in our tenant of Cenit.io, through the Shared Collection Pull action.</p>
             
             <p>Then we show created objects like Connections, Webhooks, Libraries, Schemas, Data types, Events, Flows and Translators, that enables communication through MailChimp API and each with working examples.</p>
 
             <h3>Building the integration</h3>
 
-            <p>1.To access to the tenant in CenitHub, you should do sign-in <%= link_to 'www.cenitsaas.com', 'https://www.cenitsaas.com' %></p>
+            <p>1.To access to the tenant in Cenit.io, you should do sign-in <%= link_to 'cenithub.com', 'https://cenithub.com' %></p>
 
             <p>And then press the button data integrator, which prompted an username and password, remember if you are not registered, you can create a totally free account by Sign Up.</p>
 
@@ -61,11 +61,11 @@
 
             <p>8. The flows support the allowed actions by the service and are associated with events that observe changes in the data. The flow to synchronize data are implemented with triggers time and should be adjusted according to user needs.</p>
 
-            <p>9. The flow can also be triggered by users when they want it through the API or using the admin Cenithub. For example if we execute Folder Collection, then this will synchronize data type according to the information available on Mailchimp.</p> 
+            <p>9. The flow can also be triggered by users when they want it through the API or using the admin Cenit.io. For example if we execute Folder Collection, then this will synchronize data type according to the information available on Mailchimp.</p>
 
-            <p>10. Another example is Contact Lists, if you look in Mailchimp we have 3 lists, and once synchronized is done you can see that have been downloaded to CenitHub as shown.</p>
+            <p>10. Another example is Contact Lists, if you look in Mailchimp we have 3 lists, and once synchronized is done you can see that have been downloaded to Cenit.io as shown.</p>
 
-            <p>11. To illustrate the interaction with MailChimp API through CenitHub , we will set the token required to use the CenitHub’s API . We create a new member and associate it with one of the existing lists.</p>
+            <p>11. To illustrate the interaction with MailChimp API through Cenit.io , we will set the token required to use the Cenit.io’s API . We create a new member and associate it with one of the existing lists.</p>
 
             <p>12. We also have a set of actions that you can perform on the Data Type list, for example to obtain, create, update and delete a collection. If we execute  ‘delete’, we can see that the list is permanently removed from Mailchimp.</p>
 
@@ -85,7 +85,7 @@
 
             <p>15. Create a new folder using the admin API and then we note that the new folder is created in Mailchimp too. Add to this new folder two files and when we synchronize the folders, notice that the number of file has been updated.</p>
 
-            <p>16. We are currently working on support to file upload through CenitHub.
+            <p>16. We are currently working on support to file upload through Cenit.io.
               
             <%= render 'footer' %>  
           </div>
