--- a/app/views/blog/shipwire_integration.html.erb
+++ b/app/views/blog/shipwire_integration.html.erb
@@ -23,15 +23,15 @@
           </div>
           
           <div class="content">
-              <p>Hi, the next video is about Shipwire integration in CenitHub which is a storage company and fulfillment.</p>
+              <p>Hi, the next video is about Shipwire integration in Cenit.io which is a storage company and fulfillment.</p>
 
-              <p>First we will see how to make a pull to the shared cenit’s coleccion for Shipwire. Then some schemas, data types, as well as webhook associated. Finally some flow examples of integrations with Shipwire</p>
+              <p>First we will see how to make a pull to the shared Cenit’s coleccion for Shipwire. Then some schemas, data types, as well as webhook associated. Finally some flow examples of integrations with Shipwire</p>
 
               <h3>Developing:</h3>
 
-              <p>1. First we must locate our CenitHub Data Integrator, in the browser typing the URL  <%= link_to 'www.cenitsaas.com', 'https://www.cenitsaas.com' %>, pressed the button which will ask for username and password, you are not registered in the system, we create an account.</p>
+              <p>1. First we must locate our Cenit.io Data Integrator, in the browser typing the URL  <%= link_to 'www.cenitsaas.com', 'https://www.cenitsaas.com' %>, pressed the button which will ask for username and password, you are not registered in the system, we create an account.</p>
 
-              <p>2. Already with the registered user, we enter CenitHub , where you can see all collections and integrations that our system has. We press Shared Collections, which will show all shared collections, in this case we give pull to Shipwire-2.0.0, insert the username and password credentials that were created on the site <%= link_to 'www.shipwire.com', 'https://www.shipwire.com' %>, then pull pressed.</p>
+              <p>2. Already with the registered user, we enter Cenit.io, where you can see all collections and integrations that our system has. We press Shared Collections, which will show all shared collections, in this case we give pull to Shipwire-2.0.0, insert the username and password credentials that were created on the site <%= link_to 'www.shipwire.com', 'https://www.shipwire.com' %>, then pull pressed.</p>
 
               <p>3. Already in connection roles, we loaded our Shipwire API , then pressed and edit shows the Webhooks and Connections.</p>
 
@@ -52,16 +52,16 @@
 
               <p>2. Once we are already at the test site Shipwire, we have in this order, products and activity history, showing all activities to date. The last is an order created with a description.</p>
 
-              <p>3. Now we will create an order from CenitHub, then we send it to Shipwire to be launch.
+              <p>3. Now we will create an order from Cenit.io, then we send it to Shipwire to be launch.
               To do this, first import a valid json schema for an order, in this case we got the email, a name, an address and other items of interest.</p>
 
-              <p>Then I select the basic translator for import json. And if all goes well, a new order is displayed on my CenitHub. The next step is to send the order to Shipwire, by Flow -> Create Order.</p>
+              <p>Then I select the basic translator for import json. And if all goes well, a new order is displayed on my Cenit.io. The next step is to send the order to Shipwire, by Flow -> Create Order.</p>
 
               <p>Now if we update the website of Shipwire, we can see the order created with the fields defined in the  json schema.</p>
 
               <p>4.Now let's look at another example. We want Shipwire list all the products; to do this, we must load the Data Type product. Once loaded we see that the data type product is listed below.</p>
 
-              <p>Initially, this does not show CenitHub products, because we must get them from Shipwire, therefore we must execute the flow Products List, which has a translator Import List.
+              <p>Initially, this does not show Cenit.io products, because we must get them from Shipwire, therefore we must execute the flow Products List, which has a translator Import List.
               If we click Play, it shows us that everything went successfully.</p>
 
               <p>If we click on Product as we are 9 products in Shipwire. These are Laptop, Mouse, SporWatch, etc.</p>
@@ -70,7 +70,7 @@
 
               <p>Remember, that you can enter in <%= link_to 'cenitsaas.com', 'http://cenitsaas.com'%> , where you will find several integrations ready for use out of the box.</p>
 
-              <p>Until next video from CenitHub integration.</p>
+              <p>Until next video from Cenit.io integration.</p>
               
               <%= render 'footer' %>
 
