--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -19,7 +19,7 @@
           <td>
             <p>
               You, or someone pretending to be you, have just signed up for an account on
-              <%= link_to 'CenitSaaS', 'http://cenitsaas.com', :class => 'navbar-brand' %>.
+              <%= link_to 'Cenit', 'https://cenithub.com', :class => 'navbar-brand' %>.
             <br/>
               If you are not expecting this email simply ignore it and you won't be troubled
               about it again.
