--- a/app/views/partnership/index.html.erb
+++ b/app/views/partnership/index.html.erb
@@ -43,7 +43,7 @@
 
             <p>Con el propósito de continuar perfeccionando nuestras soluciones nos interesa mantener una comunicación abierta sobre las funcionalidades a incluir en los módulos que desarrollamos y de forma general en el servicio que brindamos.</p>
 
-            <p>Cualquier sugerencia que nos permita mejorar nuestro programa de partnership, contáctenos a través de <a>support@cenitsaas.com</a></p>
+            <p>Cualquier sugerencia que nos permita mejorar nuestro programa de partnership, contáctenos a través de <a>support@cenit.io</a></p>
           </div>        
         </div>
       </div>
