--- a/app/views/shared/_page_header.html.erb
+++ b/app/views/shared/_page_header.html.erb
@@ -19,32 +19,32 @@
                 <div class="btn-nav prev"></div>
                 <div class="btn-nav next"></div>
                 <div class="slide active">
-                  <%= image_tag 'screenshots/cenithub-shared.png', :alt => 'CenitHub Shared Collections', style: "width: 700px; height: 360px;" %>
+                  <%= image_tag 'screenshots/cenithub-shared.png', :alt => 'Cenit.io Shared Collections', style: "width: 700px; height: 360px;" %>
                 </div>
                 <div class="slide">
-                  <%= image_tag 'screenshots/cenithub-flows.png', :alt => 'CenitHub Flows', style: "width: 700px; height: 360px;" %>
+                  <%= image_tag 'screenshots/cenithub-flows.png', :alt => 'Cenit.io Flows', style: "width: 700px; height: 360px;" %>
                 </div>
 
                 <div class="slide">
-                  <%= image_tag 'screenshots/cenithub-translators.png', :alt => 'CenitHub Translators', style: "width: 700px; height: 360px;" %>
+                  <%= image_tag 'screenshots/cenithub-translators.png', :alt => 'Cenit.io Translators', style: "width: 700px; height: 360px;" %>
                 </div>
                 <div class="slide">
-                  <%= image_tag 'screenshots/cenithub-webhooks.png', :alt => 'CenitHub Webhooks', style: "width: 700px; height: 360px;" %>
+                  <%= image_tag 'screenshots/cenithub-webhooks.png', :alt => 'Cenit.io Webhooks', style: "width: 700px; height: 360px;" %>
                 </div>
                 <div class="slide">
-                  <%= image_tag 'screenshots/cenithub-events.png', :alt => 'CenitHub Events', style: "width: 700px; height: 360px;" %>
+                  <%= image_tag 'screenshots/cenithub-events.png', :alt => 'Cenit.io Events', style: "width: 700px; height: 360px;" %>
                 </div>
                 <div class="slide">
-                  <%= image_tag 'screenshots/cenithub-oauthclients.png', :alt => 'CenitHub Oauth Clients', style: "width: 700px; height: 360px;" %>
+                  <%= image_tag 'screenshots/cenithub-oauthclients.png', :alt => 'Cenit.io Oauth Clients', style: "width: 700px; height: 360px;" %>
                 </div>
                 <div class="slide">
-                  <%= image_tag 'screenshots/cenithub-datatypes.png', :alt => 'CenitHub Data Types', style: "width: 700px; height: 360px;" %>
+                  <%= image_tag 'screenshots/cenithub-datatypes.png', :alt => 'Cenit.io Data Types', style: "width: 700px; height: 360px;" %>
                 </div>
                 <div class="slide">
-                  <%= image_tag 'screenshots/cenithub-storage.png', :alt => 'CenitHub Storage', style: "width: 700px; height: 360px;" %>
+                  <%= image_tag 'screenshots/cenithub-storage.png', :alt => 'Cenit.io Storage', style: "width: 700px; height: 360px;" %>
                 </div>
                 <div class="slide">
-                  <%= image_tag 'screenshots/cenithub-admin.png', :alt => 'CenitHub Admin', style: "width: 700px; height: 360px;" %>
+                  <%= image_tag 'screenshots/cenithub-admin.png', :alt => 'Cenit.io Admin', style: "width: 700px; height: 360px;" %>
                 </div>
 
 
@@ -98,7 +98,7 @@
 
         $(".temp-button_hub").hover(
             function () {
-              $(this)[0].text = 'Cenit Hub'
+              $(this)[0].text = 'Cenit.io'
             }, function () {
               $(this)[0].text = 'Data Integrator'
             }
