--- a/app/views/status/_status.html.erb
+++ b/app/views/status/_status.html.erb
@@ -1,7 +1,7 @@
 <div id="update">
   <div class="container">
     <div class="row header">
-      <h3>Cenit SaaS System Status</h3>
+      <h3>Cenit System Status</h3>
       <p>Current status and incident report</p>
     </div>
     
