--- a/app/views/terms_of_service/index.html.erb
+++ b/app/views/terms_of_service/index.html.erb
@@ -99,7 +99,7 @@ Copyright</p>
 
 <p>The Customer ordering the Services: If you are ordering the Services, then by clicking "I Agree," signing your contract for the Services or using CenitSaaS for Business, you agree to this Agreement as a "Customer." If you are agreeing to this Agreement for use by an organization, you are agreeing to this Agreement on behalf of that organization. You must have the authority to bind that organization to this Agreement, otherwise you must not sign up for the Services.</p>
 
-<p>End Users: If you are using the Services as an "End User", then by clicking "I Agree" or using CenitSaaS for Business you agree to this Agreement (especially note sections 1 and 13) and our Terms of Service at https://cenitsaas.com/terms_of_service. To the extent this Agreement conflicts with our Terms of Service, this Agreement controls. Please take note that in this Agreement, you are agreeing that your Administrator may be able to control account information and access to your CenitSaaS for Business account.</p>
+<p>End Users: If you are using the Services as an "End User", then by clicking "I Agree" or using CenitSaaS for Business you agree to this Agreement (especially note sections 1 and 13) and our Terms of Service at https://cenithub.com/terms_of_service. To the extent this Agreement conflicts with our Terms of Service, this Agreement controls. Please take note that in this Agreement, you are agreeing that your Administrator may be able to control account information and access to your CenitSaaS for Business account.</p>
 
 <ul>
   <li>End Users.</li>
@@ -119,7 +119,7 @@ Copyright</p>
   <li>Privacy Policy</li>
 </ul>
 
-<p>This Privacy Policy provides our policies and procedures for collecting, using, and disclosing your information. Users can access the CenitSaaS service (the “Service”) through our website www.cenitsaas.com, applications on Devices, through APIs, and through third-parties. A “Device” is any computer used to access the Cenit Service, including without limitation a desktop, laptop, mobile phone, tablet, or other consumer electronic device. This Privacy Policy governs your access of the CenitSaaS Service, regardless of how you access it, and by using our Services you consent to the collection, transfer, processing, storage, disclosure and other uses described in this Privacy Policy. All of the different forms of data, content, and information described below are collectively referred to as “information.”</p>
+<p>This Privacy Policy provides our policies and procedures for collecting, using, and disclosing your information. Users can access the CenitSaaS service (the “Service”) through our website cenithub.com, applications on Devices, through APIs, and through third-parties. A “Device” is any computer used to access the Cenit Service, including without limitation a desktop, laptop, mobile phone, tablet, or other consumer electronic device. This Privacy Policy governs your access of the CenitSaaS Service, regardless of how you access it, and by using our Services you consent to the collection, transfer, processing, storage, disclosure and other uses described in this Privacy Policy. All of the different forms of data, content, and information described below are collectively referred to as “information.”</p>
 
 <h4>The Information We Collect And Store</h4>
 
@@ -156,7 +156,7 @@ Copyright</p>
 
 <h4>Changing or Deleting Your Information</h4>
 
-<p>If you are a registered user, you may review, update, correct or delete the Personal Information provided in your registration or account profile by changing your “account settings.” If your personally identifiable information changes, or if you no longer desire our service, you may update or delete it by making the change on your account settings. In some cases we may retain copies of your information if required by law. For questions about your Personal Information on our Service, please contact support@cenitsaas.com. We will respond to your inquiry within 30 days.</p>
+<p>If you are a registered user, you may review, update, correct or delete the Personal Information provided in your registration or account profile by changing your “account settings.” If your personally identifiable information changes, or if you no longer desire our service, you may update or delete it by making the change on your account settings. In some cases we may retain copies of your information if required by law. For questions about your Personal Information on our Service, please contact support@cenit.io. We will respond to your inquiry within 30 days.</p>
 
 <h4>Data Retention</h4>
 
@@ -172,21 +172,21 @@ Please refer to your organization's policies if you have questions about your Ad
 
 <h4>Community</h4>
 
-<p>Our Service offers publicly accessible community services such as blogs, forums, and wikis. You should be aware that any information you provide in these areas may be read, collected, and used by others who access them. Your posts may remain even after you cancel your account. For questions about your Personal Information on our Service, please contact support@cenitsaas.com.
+<p>Our Service offers publicly accessible community services such as blogs, forums, and wikis. You should be aware that any information you provide in these areas may be read, collected, and used by others who access them. Your posts may remain even after you cancel your account. For questions about your Personal Information on our Service, please contact support@cenit.io.
 Our Site includes links to other Web sites whose privacy practices may differ from those of CenitSaaS. If you submit personal information to any of those sites, your information is governed by their privacy statements. We encourage you to carefully read the privacy statement of any web site you visit.</p>
 
 <h4>Security</h4>
 
 <p>The security of your information is important to us. When you enter sensitive information (such as a credit card number) on our order forms, we encrypt the transmission of that information using secure socket layer technology (SSL).</p>
 
-<p>We follow generally accepted standards to protect the information submitted to us, both during transmission and once we receive it. No method of electronic transmission or storage is 100% secure, however. Therefore, we cannot guarantee its absolute security. If you have any questions about security on our website, you can contact us at support@cenitsaas.com.</p>
+<p>We follow generally accepted standards to protect the information submitted to us, both during transmission and once we receive it. No method of electronic transmission or storage is 100% secure, however. Therefore, we cannot guarantee its absolute security. If you have any questions about security on our website, you can contact us at support@cenit.io.</p>
 
 <h4>Our Policy Toward Children</h4>
 
-<p>Our Services are not directed to persons under 13. We do not knowingly collect personally identifiable information from children under 13. If a parent or guardian becomes aware that his or her child has provided us with Personal Information without their consent, he or she should contact us at support@cenitsaas.com. If we become aware that a child under 13 has provided us with Personal Information, we will take steps to delete such information from our files.</p>
+<p>Our Services are not directed to persons under 13. We do not knowingly collect personally identifiable information from children under 13. If a parent or guardian becomes aware that his or her child has provided us with Personal Information without their consent, he or she should contact us at support@cenit.io. If we become aware that a child under 13 has provided us with Personal Information, we will take steps to delete such information from our files.</p>
 
 <h4> Contacting Us </h4>
-<p>If you have any questions about this Terms of Service and Privacy Policy, please contact us at support@cenitsaas.com.</p>
+<p>If you have any questions about this Terms of Service and Privacy Policy, please contact us at support@cenit.io.</p>
 
 <h4>Changes to our Terms of Service and Privacy Policy</h4>
 <p>This document may change from time to time. If we make a change to this privacy policy that we believe materially reduces your rights, we will provide you with notice (for example, by email). And we may provide notice of changes in other circumstances as well. By continuing to use the Service after those changes become effective, you agree to be bound by the revised Privacy Policy.</p>
