--- a/app/views/terms_use/index.html.erb
+++ b/app/views/terms_use/index.html.erb
@@ -62,7 +62,7 @@
           Cenit, LLC.
 
           Charlotte, NC 28216
-          support@cenitsaas.com
+          support@cenit.io
           </p>
         </p>
       </div> 
@@ -105,7 +105,7 @@ This section of the agreement only applies to CenitSaaS for Business customers.<
           The Customer ordering the Services: If you are ordering the Services, then by clicking "I Agree," signing your contract for the Services or using CenitSaaS for Business, you agree to this Agreement as a "Customer." If you are agreeing to this Agreement for use by an organization, you are agreeing to this Agreement on behalf of that organization. You must have the authority to bind that organization to this Agreement, otherwise you must not sign up for the Services.
 </p>
         <p>
-          End Users: If you are using the Services as an "End User", then by clicking "I Agree" or using CenitSaaS for Business you agree to this Agreement (especially note sections 1 and 13) and our Terms of Service at <a>https://www.cenitsaas.com/terms </a>. To the extent this Agreement conflicts with our Terms of Service, this Agreement controls. Please take note that in this Agreement, you are agreeing that your Administrator may be able to control account information and access to your CenitSaaS for Business account.</p>
+          End Users: If you are using the Services as an "End User", then by clicking "I Agree" or using CenitSaaS for Business you agree to this Agreement (especially note sections 1 and 13) and our Terms of Service at <a>https://cenithub.com/terms </a>. To the extent this Agreement conflicts with our Terms of Service, this Agreement controls. Please take note that in this Agreement, you are agreeing that your Administrator may be able to control account information and access to your CenitSaaS for Business account.</p>
           End Users.    
           Customer Obligations.    
           Services.    
@@ -126,7 +126,7 @@ This section of the agreement only applies to CenitSaaS for Business customers.<
       <div class="col-md-12">
         <h2><b>Privacy Policy</b></h2>
         <p>
-          This Privacy Policy provides our policies and procedures for collecting, using, and disclosing your information. Users can access the CenitSaaS service (the “Service”) through our website www.cenitsaas.com, applications on Devices, through APIs, and through third-parties. A “Device” is any computer used to access the Cenit Service, including without limitation a desktop, laptop, mobile phone, tablet, or other consumer electronic device. This Privacy Policy governs your access of the CenitSaaS Service, regardless of how you access it, and by using our Services you consent to the collection, transfer, processing, storage, disclosure and other uses described in this Privacy Policy. All of the different forms of data, content, and information described below are collectively referred to as “information.”</p>
+          This Privacy Policy provides our policies and procedures for collecting, using, and disclosing your information. Users can access the CenitSaaS service (the “Service”) through our website cenithub.com, applications on Devices, through APIs, and through third-parties. A “Device” is any computer used to access the Cenit Service, including without limitation a desktop, laptop, mobile phone, tablet, or other consumer electronic device. This Privacy Policy governs your access of the CenitSaaS Service, regardless of how you access it, and by using our Services you consent to the collection, transfer, processing, storage, disclosure and other uses described in this Privacy Policy. All of the different forms of data, content, and information described below are collectively referred to as “information.”</p>
       </div>
       <div class="col-md-12">
         <h3>The Information We Collect And Store</h3>
@@ -168,7 +168,7 @@ Information You Provide.   When you register an account, we collect some persona
       <div class="col-md-12">
         <h3>Changing or Deleting Your Information</h3>
         <p>
-          If you are a registered user, you may review, update, correct or delete the Personal Information provided in your registration or account profile by changing your “account settings.” If your personally identifiable information changes, or if you no longer desire our service, you may update or delete it by making the change on your account settings. In some cases we may retain copies of your information if required by law. For questions about your Personal Information on our Service, please contact support@cenitsaas.com. We will respond to your inquiry within 30 days.</p>
+          If you are a registered user, you may review, update, correct or delete the Personal Information provided in your registration or account profile by changing your “account settings.” If your personally identifiable information changes, or if you no longer desire our service, you may update or delete it by making the change on your account settings. In some cases we may retain copies of your information if required by law. For questions about your Personal Information on our Service, please contact support@cenit.io. We will respond to your inquiry within 30 days.</p>
       </div>
       <div class="col-md-12">
         <h3>Data Retention</h3>
@@ -193,12 +193,12 @@ Please refer to your organization's policies if you have questions about your Ad
         <p>
           The security of your information is important to us. When you enter sensitive information (such as a credit card number) on our order forms, we encrypt the transmission of that information using secure socket layer technology (SSL).</p>
         <p>
-          We follow generally accepted standards to protect the information submitted to us, both during transmission and once we receive it. No method of electronic transmission or storage is 100% secure, however. Therefore, we cannot guarantee its absolute security. If you have any questions about security on our website, you can view our Security Overview Page or contact us at support@cenitsaas.com.</p>
+          We follow generally accepted standards to protect the information submitted to us, both during transmission and once we receive it. No method of electronic transmission or storage is 100% secure, however. Therefore, we cannot guarantee its absolute security. If you have any questions about security on our website, you can view our Security Overview Page or contact us at support@cenit.io.</p>
       </div>
       <div class="col-md-12">
         <h3>Our Policy Toward Children</h3>
         <p>
-          Our Services are not directed to persons under 13. We do not knowingly collect personally identifiable information from children under 13. If a parent or guardian becomes aware that his or her child has provided us with Personal Information without their consent, he or she should contact us at support@cenitsaas.com. If we become aware that a child under 13 has provided us with Personal Information, we will take steps to delete such information from our files.
+          Our Services are not directed to persons under 13. We do not knowingly collect personally identifiable information from children under 13. If a parent or guardian becomes aware that his or her child has provided us with Personal Information without their consent, he or she should contact us at support@cenit.io. If we become aware that a child under 13 has provided us with Personal Information, we will take steps to delete such information from our files.
 </p>
       </div>
       <div class="col-md-12">
@@ -208,12 +208,12 @@ Please refer to your organization's policies if you have questions about your Ad
         <p>
           CenitSaaS complies with the U.S. – E.U. Safe Harbor Framework and the U.S. – Swiss Safe Harbor framework as set forth by the U.S. Department of Commerce regarding the collection, use, and retention of personal data from European Union member countries and Switzerland. CenitSaaS has certified that it adheres to the Safe Harbor Privacy Principles of notice, choice, onward transfer, security, data integrity, access, and enforcement. To learn more about the Safe Harbor program, please visit <a href="http://export.gov/safeharbor"> to view CenitSaaS certification.</a></p>
         <p>
-If you have questions regarding this statement, you should first contact us at support@cenitsaas.com. If you do not receive acknowledgement of your inquiry or your inquiry has not been satisfactorily addressed, you should then contact TRUSTe at <a>http://www.truste.org/consumers/watchdog_complaint.php</a>. The TRUSTe dispute resolution process is only available in English.</p>
+If you have questions regarding this statement, you should first contact us at support@cenit.io. If you do not receive acknowledgement of your inquiry or your inquiry has not been satisfactorily addressed, you should then contact TRUSTe at <a>http://www.truste.org/consumers/watchdog_complaint.php</a>. The TRUSTe dispute resolution process is only available in English.</p>
       </div>
       <div class="col-md-12">
         <h3>Contacting Us</h3>
         <p>
-          If you have any questions about this Privacy Policy, please contact us at support@cenitsaas.com.</p>
+          If you have any questions about this Privacy Policy, please contact us at support@cenit.io.</p>
       </div>
       <div class="col-md-12">
         <h3>Changes to our Privacy Policy</h3>
