--- a/app/views/blog/first_anniversary.html.erb
+++ b/app/views/blog/first_anniversary.html.erb
@@ -14,7 +14,7 @@
       <div class="row">
         <div class="col-sm-10 post">
           <div class="title">
-            CenitSaaS - 1 year since kick off
+            Cenit - 1 year since kick off
           </div>
           <div class="author">
             <%= image_tag 'testimonials/sancho.jpg', :alt => 'author', class: "avatar" %>
@@ -24,7 +24,7 @@
             <p>
               Now we are close to celebrate our first anniversary next Jun 1st. At that time, there have been 
               hard work, long hours of brainstorming and lots of valuable feedback from colleagues. Most of which added 
-              some new functionality or fine-tuned some existing functionality at CenitSaaS. We've got a recap of our work 
+              some new functionality or fine-tuned some existing functionality at Cenit. We've got a recap of our work
               that want to share with you.
             </p>
             <p>
