--- a/app/views/blog/gmail_cenit_collection.html.erb
+++ b/app/views/blog/gmail_cenit_collection.html.erb
@@ -36,7 +36,7 @@
             <p>
               Hopefully you do not have to run the awkward way anymore, because the Gmail Cenit
               Collection is now available, a wrapper that let you send emails as easy as it can be.
-              Try it now by following the next steps by yourself, signing up for free in CenitSaaS.</p>
+              Try it now by following the next steps by yourself, signing up for free in Cenit.</p>
 
             <h1 style="line-height: 100%; page-break-before: auto; page-break-after: auto">
               Trying the Gmail Collection
@@ -49,7 +49,7 @@
                           cenithub_url(redirect_path: '/data/setup~shared_collection/gmail/pull',
                                        flash_message: "Click <span class=\"label label-info\"><i class=\"icon-arrow-down\"></i> Pull</span> or <span class=\"label label-info\"><i class=\"icon-ok\"></i> Ok</span> if you are already synchronized with this collection"),
                           target: '#'
-              %> and pull it with your CenitSaaS account. If you do not have a CenitSaaS account go on anyway and
+              %> and pull it with your Cenit account. If you do not have a Cenit account go on anyway and
               create one, it’s free.</p>
 
             <p align="center">
@@ -64,7 +64,7 @@
                                        flash_message: 'Your Gmail Collection'),
                           target: '#'
               %>. Now you should follow the steps on the 'Quick Start' section of the collection readme.
-              Two simple steps, and you will send an email with your Google account through CenitHub,
+              Two simple steps, and you will send an email with your Google account through Cenit.io,
               just click the links to get them done
             </p>
 
@@ -116,23 +116,23 @@
   <span class="hljs-string">"Content-Type: application/json"</span>\
   -<span class="hljs-keyword">H</span> <span class="hljs-string">"X-User-Access-Key: XXXXXXX"</span>\
   -<span class="hljs-keyword">H</span> <span class="hljs-string">"X-User-Access-Token: XXXXXXXXXXXXXXXX"</span>\
-  -X <span class="hljs-keyword">POST</span> -<span class="hljs-keyword">d</span> '{<span class="hljs-string">"to"</span>:<span class="hljs-string">"support@cenit.io"</span>,<span class="hljs-string">"subject"</span>:<span class="hljs-string">"Hello"</span>,<span class="hljs-string">"body"</span>:<span class="hljs-string">"Just to say hello!"</span>,<span class="hljs-string">"attachments"</span>:[{<span class="hljs-string">"filename"</span>:<span class="hljs-string">"file.txt"</span>,<span class="hljs-string">"data"</span>:<span class="hljs-string">"Sent through CenitHub API"</span>}]}'\
-  https:<span class="hljs-comment">//www.cenithub.com/api/v1/mime/message</span>
+  -X <span class="hljs-keyword">POST</span> -<span class="hljs-keyword">d</span> '{<span class="hljs-string">"to"</span>:<span class="hljs-string">"support@cenit.io"</span>,<span class="hljs-string">"subject"</span>:<span class="hljs-string">"Hello"</span>,<span class="hljs-string">"body"</span>:<span class="hljs-string">"Just to say hello!"</span>,<span class="hljs-string">"attachments"</span>:[{<span class="hljs-string">"filename"</span>:<span class="hljs-string">"file.txt"</span>,<span class="hljs-string">"data"</span>:<span class="hljs-string">"Sent through Cenit.io API"</span>}]}'\
+  https:<span class="hljs-comment">//cenit.io/api/v1/mime/message</span>
 </code>
             </pre>
 
             <p>
               Just copy the CURL command from the readme (it already contains proper access headers) and run it in your
-              console. The email in JSON format is sent to the CenitHub API and then Cenit does all the awkward work for
-              you. You can send emails in any format supported by the CenitHub API, XML for example. Multiple
+              console. The email in JSON format is sent to the Cenit.io API and then Cenit does all the awkward work for
+              you. You can send emails in any format supported by the Cenit.io API, XML for example. Multiple
               attachments and binary data are also supported, just continue reading your collection readme to see more
               examples.
             </p>
 
             <p>
-              Because CenitHub automatically manages your OAuth 2.0 access and refreshes tokens, you don not have to
+              Because Cenit.io automatically manages your OAuth 2.0 access and refreshes tokens, you don not have to
               worry in the future about being authorized again. Just continue sending emails in a simple format through
-              the CenitHub API, until you explicitly revoke your authorization with your CenitSaaS account or in your
+              the Cenit.io API, until you explicitly revoke your authorization with your Cenit account or in your
               Google Acount configuration.
             </p>
 
@@ -170,7 +170,7 @@
             </h1>
 
             <p>
-              The workflow that sends an email through CenitHub starts at the DATA configuration area, where the Gmail
+              The workflow that sends an email through Cenit.io starts at the DATA configuration area, where the Gmail
               Collection defines the
               <%=
                   link_to 'data types',
@@ -196,8 +196,8 @@
             </div>
 
             <p>
-              When a MIME Message is created in the administration view of the CenitHub
-              portal or via POST using the CenitHub API then a creation event is fired.
+              When a MIME Message is created in the administration view of the Cenit.io
+              portal or via POST using the Cenit.io API then a creation event is fired.
               <%=
                   link_to 'Events',
                           cenithub_url(redirect_path: '/data/setup~event',
@@ -359,7 +359,7 @@
                                        flash_message: 'OAuth provider configurations.'),
                           target: '#'
               %> defines a refresh token strategy that can be selected from a set of build-in strategies or it can be
-              customized using an algorithm. CenitHub shares a set of providers, clients and scopes that can be used
+              customized using an algorithm. Cenit.io shares a set of providers, clients and scopes that can be used
               to configure the authorization you need.
             </p>
 
