--- a/app/views/directory/show.html.erb
+++ b/app/views/directory/show.html.erb
@@ -49,12 +49,6 @@
             <table>
               <% if @item.raml_id.present? && false %>
               <tr>
-                <td> <%= link_to 'RAML Console supplied by', "http://console.cenithub.com/?id=#{@item.raml_id}" %></td>
-                <td>&nbsp;&nbsp;
-                  <%= link_to "http://console.cenithub.com/?id=#{@item.raml_id}" do %>
-                    <%= image_tag 'logo_cenitsaas_web.png', style: 'height: 30px;' %>
-                  <% end %>
-                </td>
               </tr>
               <% end %>
             </table>
@@ -157,7 +151,7 @@
 
       <div class="row header">
         <h3>Need an easy way to connect your business with <%= link_to @item.name, @item.api_provider || @item.api_homepage || '#' %>?</h3>
-        <p>CenitSaaS is the perfect tool to help you out. <a data-toggle="modal"  class="item" href="#contact_us" data-backdrop="false">Get in touch</a> </p>
+        <p>Cenit is the perfect tool to help you out. <a data-toggle="modal"  class="item" href="#contact_us" data-backdrop="false">Get in touch</a> </p>
         <br/><br/>
       </div>
 
