--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -1,6 +1,6 @@
 <nav class="nav-menu">
   <h3>Menu</h3>
-  <%= link_to 'CenitSaaS', "#{root_path}", :class => 'item', data: { no_turbolink: true }  %>
+  <%= link_to 'Cenit', "#{root_path}", :class => 'item', data: { no_turbolink: true }  %>
   <% if current_user.present? %>
     <%= link_to 'Edit account', edit_user_registration_path, :class => 'item', data: { no_turbolink: true } %>
     <%= link_to 'Profile', status_path(current_user.id), :class => 'item', data: { no_turbolink: true } %>
